@@ -1,3 +1,13 @@
+2013-01-11  Pavel Feldman  <pfeldman@chromium.org>
+
+        Web Inspector [chromium]: toolbar border is missing on non-Mac in docked-to-bottom mode
+        https://bugs.webkit.org/show_bug.cgi?id=106560
+
+        Reviewed by Vsevolod Vlasov.
+
+        * src/js/devTools.css:
+        (body.dock-to-bottom.platform-mac #toolbar):
+
 2013-01-10  Noel Gordon  <noel.gordon@gmail.com>
 
         [chromium] Disable PNG and ICO image webkit-unit-tests after r139347
